# OS_LABA1_Linux

Main/: CMakeLists.txt  main.cpp
Number/: CMakeLists.txt  Number.h
Vector/: CMakeLists.txt  Vector.cpp  Vector.h
